test/quota/grant-creation-policy/04-organization-membership.yaml
apiVersion: resourcemanager.miloapis.com/v1alpha1
kind: OrganizationMembership
metadata:
  name: grant-policy-test-membership
  namespace: organization-grant-policy-test-org
  labels:
    test.miloapis.com/scenario: "grant-creation-policy"
spec:
  organizationRef:
    name: grant-policy-test-org
  userRef:
    name: grant-policy-test-user
